projects/kotlin-util/1.2/docs/it.czerwinski.kotlin.util/-option/index.md
---
title: Option - Kotlin utilities
---

[Kotlin utilities](../../index.html) / [it.czerwinski.kotlin.util](../index.html) / [Option](./index.html)

# Option

`sealed class Option<out T>`

Representation of an optional value. The instance might be either [Some](../-some/index.html) value or [None](../-none/index.html).

### Parameters

`T` - Type of the optional value.

### Properties

| [isDefined](is-defined.html) | `val isDefined: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [Some](../-some/index.html). Otherwise returns `false`. |
| [isEmpty](is-empty.html) | `abstract val isEmpty: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [None](../-none/index.html). Otherwise returns `false`. |
| [isNotEmpty](is-not-empty.html) | `val isNotEmpty: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [Some](../-some/index.html). Otherwise returns `false`. |
| [iterator](iterator.html) | `abstract val ~~iterator~~: `[`Iterator`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterator/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton iterator returning the option's value if it is defined, or an empty iterator if the option is empty. |

### Functions

| [all](all.html) | `fun all(predicate: (`[`T`](index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](all.html#it.czerwinski.kotlin.util.Option$all(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) to the value if this is [Some](../-some/index.html) or `true` if this is [None](../-none/index.html). |
| [any](any.html) | `fun any(predicate: (`[`T`](index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](any.html#it.czerwinski.kotlin.util.Option$any(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) to the value if this is [Some](../-some/index.html) or `false` if this is [None](../-none/index.html). |
| [asIterable](as-iterable.html) | `abstract fun asIterable(): `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.html#T)`>`<br>Returns an iterable that wraps this [Option](./index.html) returning its value if it is defined, or an empty iterable if the option is empty. |
| [asSequence](as-sequence.html) | `abstract fun asSequence(): `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.html#T)`>`<br>Returns a sequence that wraps this [Option](./index.html) returning its value if it is defined, or an empty sequence if the option is empty. |
| [filter](filter.html) | `fun filter(predicate: (`[`T`](index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](./index.html)`<`[`T`](index.html#T)`>`<br>Returns the same [Some](../-some/index.html) if the [predicate](filter.html#it.czerwinski.kotlin.util.Option$filter(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is satisfied for the value. Otherwise returns a [None](../-none/index.html). |
| [filterIsInstance](filter-is-instance.html) | `fun <R> filterIsInstance(): `[`Option`](./index.html)`<`[`R`](filter-is-instance.html#R)`>`<br>Returns the same [Some](../-some/index.html) casted to type [R](filter-is-instance.html#R) if it is [R](filter-is-instance.html#R). Otherwise returns a [None](../-none/index.html). |
| [filterNot](filter-not.html) | `fun filterNot(predicate: (`[`T`](index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](./index.html)`<`[`T`](index.html#T)`>`<br>Returns the same [Some](../-some/index.html) if the [predicate](filter-not.html#it.czerwinski.kotlin.util.Option$filterNot(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is not satisfied for the value. Otherwise returns a [None](../-none/index.html). |
| [flatMap](flat-map.html) | `fun <R> flatMap(transform: (`[`T`](index.html#T)`) -> `[`Option`](./index.html)`<`[`R`](flat-map.html#R)`>): `[`Option`](./index.html)`<`[`R`](flat-map.html#R)`>`<br>Maps value of a [Some](../-some/index.html) to a new [Option](./index.html) using [transform](flat-map.html#it.czerwinski.kotlin.util.Option$flatMap(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.Option.flatMap.R)))))/transform) or returns the same [None](../-none/index.html). |
| [fold](fold.html) | `fun <R> fold(default: `[`R`](fold.html#R)`, transform: (`[`T`](index.html#T)`) -> `[`R`](fold.html#R)`): `[`R`](fold.html#R)<br>`fun <R> fold(default: () -> `[`R`](fold.html#R)`, transform: (`[`T`](index.html#T)`) -> `[`R`](fold.html#R)`): `[`R`](fold.html#R)<br>Returns result of applying [transform](fold.html#it.czerwinski.kotlin.util.Option$fold(it.czerwinski.kotlin.util.Option.fold.R, kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.fold.R)))/transform) on the value of [Some](../-some/index.html) or [default](fold.html#it.czerwinski.kotlin.util.Option$fold(it.czerwinski.kotlin.util.Option.fold.R, kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.fold.R)))/default) if this is [None](../-none/index.html). |
| [forEach](for-each.html) | `fun forEach(action: (`[`T`](index.html#T)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Runs [action](for-each.html#it.czerwinski.kotlin.util.Option$forEach(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Unit)))/action) if this is a [Some](../-some/index.html). Returns [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) without any action if this is [None](../-none/index.html). |
| [get](get.html) | `abstract fun get(): `[`T`](index.html#T)<br>Gets the value of a [Some](../-some/index.html) or throws an exception. |
| [getOrNull](get-or-null.html) | `abstract fun getOrNull(): `[`T`](index.html#T)`?`<br>Gets the value of a [Some](../-some/index.html) or `null` if this is a [None](../-none/index.html). |
| [iterator](iterator.html) | `abstract fun iterator(): `[`Iterator`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterator/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton iterator returning the option's value if it is defined, or an empty iterator if the option is empty. |
| [map](map.html) | `fun <R> map(transform: (`[`T`](index.html#T)`) -> `[`R`](map.html#R)`): `[`Option`](./index.html)`<`[`R`](map.html#R)`>`<br>Maps value of a [Some](../-some/index.html) using [transform](map.html#it.czerwinski.kotlin.util.Option$map(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.map.R)))/transform) or returns the same [None](../-none/index.html). |
| [none](none.html) | `fun none(predicate: (`[`T`](index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `false` if the [predicate](none.html#it.czerwinski.kotlin.util.Option$none(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is met by the value if this is [Some](../-some/index.html) or `true` otherwise. |
| [toLeft](to-left.html) | `fun <R> toLeft(right: () -> `[`R`](to-left.html#R)`): `[`Either`](../-either/index.html)`<`[`T`](index.html#T)`, `[`R`](to-left.html#R)`>`<br>Returns a [Right](../-right/index.html) containing the given argument [right](to-left.html#it.czerwinski.kotlin.util.Option$toLeft(kotlin.Function0((it.czerwinski.kotlin.util.Option.toLeft.R)))/right) if this is empty, or a [Left](../-left/index.html) containing this option's value if it is defined. |
| [toList](to-list.html) | `abstract fun toList(): `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton list containing the option's value if it is defined, or an empty list if the option is empty. |
| [toRight](to-right.html) | `fun <L> toRight(left: () -> `[`L`](to-right.html#L)`): `[`Either`](../-either/index.html)`<`[`L`](to-right.html#L)`, `[`T`](index.html#T)`>`<br>Returns a [Left](../-left/index.html) containing the given argument [left](to-right.html#it.czerwinski.kotlin.util.Option$toRight(kotlin.Function0((it.czerwinski.kotlin.util.Option.toRight.L)))/left) if this is empty, or a [Right](../-right/index.html) containing this option's value if it is defined. |
| [zip](zip.html) | `infix fun <R> zip(other: `[`Option`](./index.html)`<`[`R`](zip.html#R)`>): `[`Option`](./index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`T`](index.html#T)`, `[`R`](zip.html#R)`>>`<br>Returns [Some](../-some/index.html) containing a `Pair` of values of this and [other](./index.html) if both [Option](./index.html)s are [Some](../-some/index.html). Otherwise returns [None](../-none/index.html).`fun <T1, R> zip(other: `[`Option`](./index.html)`<`[`T1`](zip.html#T1)`>, transform: (`[`T`](index.html#T)`, `[`T1`](zip.html#T1)`) -> `[`R`](zip.html#R)`): `[`Option`](./index.html)`<`[`R`](zip.html#R)`>`<br>Returns [Some](../-some/index.html) containing the result of applying [transform](zip.html#it.czerwinski.kotlin.util.Option$zip(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.Option.zip.T1)), kotlin.Function2((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.zip.T1, it.czerwinski.kotlin.util.Option.zip.R)))/transform) to both values of this and [other](./index.html) if both [Option](./index.html)s are [Some](../-some/index.html). Otherwise returns [None](../-none/index.html). |

### Companion Object Functions

| [empty](empty.html) | `fun <T> empty(): `[`Option`](./index.html)`<`[`T`](empty.html#T)`>`<br>Returns [None](../-none/index.html). |
| [invoke](invoke.html) | `operator fun <T> invoke(value: `[`T`](invoke.html#T)`?): `[`Option`](./index.html)`<`[`T`](invoke.html#T)`>`<br>Returns [Some](../-some/index.html) if the [value](invoke.html#it.czerwinski.kotlin.util.Option.Companion$invoke(it.czerwinski.kotlin.util.Option.Companion.invoke.T)/value) is not `null` or [None](../-none/index.html) if the [value](invoke.html#it.czerwinski.kotlin.util.Option.Companion$invoke(it.czerwinski.kotlin.util.Option.Companion.invoke.T)/value) is `null`. |

### Extension Functions

| [asOption](../as-option.html) | `fun <T> `[`T`](../as-option.html#T)`?.asOption(): `[`Option`](./index.html)`<`[`T`](../as-option.html#T)`>`<br>Returns [Some](../-some/index.html) if this is not `null` or [None](../-none/index.html) if this is `null`. |
| [contains](../contains.html) | `operator fun <T> `[`Option`](./index.html)`<`[`T`](../contains.html#T)`>.contains(element: `[`T`](../contains.html#T)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Tests whether the [Option](./index.html) contains the given [element](../contains.html#it.czerwinski.kotlin.util$contains(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.contains.T)), it.czerwinski.kotlin.util.contains.T)/element). |
| [flatten](../flatten.html) | `fun <T> `[`Option`](./index.html)`<`[`Try`](../-try/index.html)`<`[`T`](../flatten.html#T)`>>.flatten(): `[`Option`](./index.html)`<`[`T`](../flatten.html#T)`>`<br>Returns [Some](../-some/index.html) if this [Some](../-some/index.html) contains a [Success](../-success/index.html). Otherwise returns [None](../-none/index.html).`fun <T> `[`Option`](./index.html)`<`[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](../flatten.html#T)`>>.flatten(): `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](../flatten.html#T)`>`<br>Returns nested [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) if this is [Some](../-some/index.html). Otherwise returns an empty [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html).`fun <T> `[`Option`](./index.html)`<`[`Option`](./index.html)`<`[`T`](../flatten.html#T)`>>.flatten(): `[`Option`](./index.html)`<`[`T`](../flatten.html#T)`>`<br>Transforms a nested [Option](./index.html) to a not nested [Option](./index.html). |
| [getOrElse](../get-or-else.html) | `fun <T> `[`Option`](./index.html)`<`[`T`](../get-or-else.html#T)`>.getOrElse(default: () -> `[`T`](../get-or-else.html#T)`): `[`T`](../get-or-else.html#T)<br>Gets the value of a [Some](../-some/index.html) or [default](../get-or-else.html#it.czerwinski.kotlin.util$getOrElse(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.getOrElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.getOrElse.T)))/default) value if this is [None](../-none/index.html). |
| [orElse](../or-else.html) | `fun <T> `[`Option`](./index.html)`<`[`T`](../or-else.html#T)`>.orElse(default: () -> `[`Option`](./index.html)`<`[`T`](../or-else.html#T)`>): `[`Option`](./index.html)`<`[`T`](../or-else.html#T)`>`<br>Returns this [Option](./index.html) if this is a [Some](../-some/index.html) or [default](../or-else.html#it.czerwinski.kotlin.util$orElse(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.orElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.orElse.T)))))/default) if this is [None](../-none/index.html). |

### Inheritors

| [None](../-none/index.html) | `object None : `[`Option`](./index.html)`<`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`<br>Representation of a non-existent value. |
| [Some](../-some/index.html) | `data class Some<T> : `[`Option`](./index.html)`<`[`T`](../-some/index.html#T)`>`<br>Representation of a value of type [T](../-some/index.html#T). |

